fix: update background color of trip info horizontal rule for improved visibility

--- a/assets/css/payment.css
+++ b/assets/css/payment.css
@@ -138,7 +138,7 @@
 .trip-info hr {
     width: 2%;
     height: 100%;
-    background-color: #E6E6E6;
+    background-color: #E2E2E2;
     transform: rotate(90deg);
 }
 
